fix a spacing issue on search results pages

--- a/less/post-page-styles.less
+++ b/less/post-page-styles.less
@@ -735,6 +735,9 @@ article img.attachment-post-thumbnail {
 }
 
 // Search Results
+.search-results .form-search {
+  margin-bottom: 16px;
+}
 .search-term {
   background-color: @grayLighter;
   padding: 1px 5px;
